--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -3010,17 +3010,11 @@ uningest.dialog.text=Czy na pewno chcesz cofn\u0105\u0107 analiz\u0119 pliku o n
 
 add.dataset.button=Dodaj zbi\u00F3r danych
 add.dataset.dialog.header=Wybierz kolekcj\u0119
-add.dataset.dialog.select.lookup=Za pomoc\u0105 wyszukiwarki
 add.dataset.dialog.select.lookup.tooltip=Wyszukiwanie obejmuje jedynie te kolekcje, w kt\u00F3rych posiadasz uprawnienia wystarczaj\u0105ce do zdeponowania zbioru.
-add.dataset.dialog.select.tree=Za pomoc\u0105 drzewka
 add.dataset.dialog.select.tree.tooltip=Drzewko pozwala na wyb\u00F3r jedynie tych kolekcji, w kt\u00F3rych posiadasz uprawnienia wystarczaj\u0105ce do zdeponowania zbioru. W drzewku nie s\u0105 uwzgl\u0119dniane przypi\u0119te kolekcje.
-add.dataset.dialog.info=Wybierz kolekcj\u0119 do kt\u00F3rej chcesz doda\u0107 nowy zbi\u00F3r danych. Mo\u017Cesz to zrobi\u0107 na dwa sposoby:
-add.dataset.dialog.lookup.id=Identyfikator kolekcji
-add.dataset.dialog.lookup.name=Nazwa kolekcji
-add.dataset.dialog.lookup.parents=Kolekcje nadrz\u0119dne
-add.dataset.dialog.lookup.placeholder=Wprowad\u017A cz\u0119\u015B\u0107 nazwy kolekcji
-add.dataset.dialog.lookup.required=Nale\u017Cy wybra\u0107 kolekcj\u0119
+add.dataset.dialog.info=Wybierz kolekcj\u0119 do kt\u00F3rej chcesz doda\u0107 nowy zbi\u00F3r danych:
 add.dataset.dialog.tree.required=Nale\u017Cy wybra\u0107 kolekcj\u0119
+add.dataset.dialog.tree.filter=Przefiltruj kolekcje
 add.dataset.dialog.button.create=Dodaj zbi\u00F3r danych do wybranej kolekcji
 
 geobox.invalid.empty=To pole nie mo\u017Ce by\u0107 puste, je\u015Bli inne pole geograficznego prostok\u0105ta ograniczaj\u0105cego zosta\u0142o wype\u0142nione.
