--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -3061,7 +3061,7 @@ add.dataset.button=Add dataset
 add.dataset.dialog.header=Select dataverse
 add.dataset.dialog.select.lookup.tooltip=The search only covers dataverses where you have sufficient permissions to deposit a dataset.
 add.dataset.dialog.select.tree.tooltip=The tree allows you to select only those collections where you have sufficient permissions to deposit a dataset. Linked dataverses are not included in the tree.
-add.dataset.dialog.info=Select the dataverse to which you want to add a dataset:
+add.dataset.dialog.info=Select the dataverse to which you want to add the new dataset:
 add.dataset.dialog.tree.required=Dataverse has to be selected
 add.dataset.dialog.tree.filter=Filter dataverses
 add.dataset.dialog.button.create=Add a dataset to the selected dataverse
