Closes #2432: Textual changes

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -3025,7 +3025,7 @@ citation.constants.distributor=distributor
 citation.constants.publisher=publisher
 
 # Search Results
-result.harvested.description=This Dataset is harvested from our partners. Clicking the link will take you directly to the archival source of the data.
+result.harvested.description=This dataset comes from an external source to which the link redirects.
 
 # Unconfirmed mail
 unconfirmed.mail.banner.text=The e-mail assigned to your repository account has not been verified yet. Some features, e.g. creating and editing datasets, are not available to you. Please verify your e-mail. To check if you can resend a verification email,
