--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -1555,7 +1555,7 @@ dataset.reject.messageBox.counter=Limit znak\u00F3w: {0}
 dataset.reject.reply.to.label=Zwrotny adres e-mail
 dataset.reject.reply.to.sendCopy=Wy\u015Blij kopi\u0119 tej wiadomo\u015Bci na zwrotny adres e-mail.
 dataset.reject.reply.to.tooltip=Adres e-mail s\u0142u\u017C\u0105cy do kontaktu w sprawie weryfikacji tego zbioru danych. Adres ten zostanie udost\u0119pniony osobie deponuj\u0105cej zbi\u00F3r i powinien umo\u017Cliwia\u0107 dalszy kontakt z osob\u0105 zwracaj\u0105c\u0105 zbi\u00F3r.
-dataset.reject.reply.to.invalid.mail=Wprowadzony e-mail jest niepoptawny.
+dataset.reject.reply.to.invalid.mail=Wprowadzony e-mail jest niepoprawny.
 dataset.reject.success=Ten zbi\u00F3r danych zosta\u0142 zwr\u00F3cony do poprawy.
 dataset.reject.failure=Nie uda\u0142o si\u0119 zwr\u00F3ci\u0107 zbioru danych - {0}
 dataset.reject.datasetNull=Nie mo\u017Cna zwr\u00F3ci\u0107 tego zbioru danych autorowi, poniewa\u017C jest nullem.
@@ -2976,7 +2976,7 @@ citation.constants.distributor=dystrybutor
 citation.constants.publisher=wydawca
 
 # Search Results
-result.harvested.description=Ten zbi\u00F3r danych jest harwestowany od naszych partner\u00F3w. Klikni\u0119cie na link przekieruje Ci\u0119 bezpo\u015Brednio do pierwotnego \u017Ar\u00F3d\u0142a tych danych.
+result.harvested.description=Ten zbi\u00F3r danych pochodzi z zewn\u0119trznego \u017Ar\u00F3d\u0142a, do kt\u00F3rego przekierowuje link.
 
 # Unconfirmed mail
 unconfirmed.mail.banner.text=E-mail przypisany do Twojego konta w repozytorium nie zosta\u0142 jeszcze zweryfikowany. Niekt\u00F3re funkcjonalno\u015Bci, np. tworzenie i edycja zbior\u00F3w danych, s\u0105 dla Ciebie niedost\u0119pne. Prosimy, zweryfikuj sw\u00F3j adres e-mail. Aby sprawdzi\u0107, czy mo\u017Cesz ponownie wys\u0142a\u0107 wiadomo\u015B\u0107 umo\u017Cliwiaj\u0105c\u0105 weryfikacj\u0119 adresu e-mail,
