Closes #2425: Adding ORCID and affiliation ROR identifiers to the user profile

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -331,7 +331,17 @@ user.lastName=Family Name
 user.lastName.tip=The last name you would like to use for this account.
 user.email.tip=A valid email address you have access to in order to be contacted.
 user.email.taken=This email address is already taken.
+user.orcid=ORCID
+user.orcid.tip=ORCID is an open digital identifier allowing distinction between researchers having the same or similar name and surname.
+user.orcid.invalid.format=Invalid ORCID format.
+user.orcid.invalid.checksum=Invalid ORCID checksum.
 user.affiliation.tip=The organization with which you are affiliated.
+user.affiliationror=Affiliation ROR
+user.affiliationror.tip=ROR identifier of the affiliating institution. The identifier must be provided in its URL form, for instance "https://ror.org/039bjqg32" for the University of Warsaw. You can also enter the name of the institution and select its ROR ID from the list.
+user.affiliationror.suggestionDisplay.valueHeader=ROR
+user.affiliationror.suggestionDisplay.detailsHeader=Institution
+user.affiliationror.ror.invalid.format=Invalid ROR format.
+user.affiliationror.ror.invalid.checksum=Invalid ROR checksum.
 user.position=Position
 user.position.tip=Your role or title at the organization you are affiliated with; such as staff, faculty, student, etc.
 user.notificationsLanguage=E-mail notifications language
