--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -331,7 +331,17 @@ user.lastName=Nazwisko
 user.lastName.tip=Nazwisko, kt\u00F3re chcesz u\u017Cy\u0107 dla tego konta.
 user.email.tip=Aktualny adres e-mail, do kt\u00F3rego posiadasz dost\u0119p i kt\u00F3rego mo\u017Cna u\u017Cy\u0107, by si\u0119 z Tob\u0105 skontaktowa\u0107.
 user.email.taken=Ten adres e-mail jest ju\u017C przypisany do innego konta.
+user.orcid=ORCID
+user.orcid.tip=ORCID to otwarty identyfikator cyfrowy umo\u017Cliwiaj\u0105cy rozr\u00F3\u017Cnienie naukowc\u00F3w o tym samym lub podobnym imieniu i nazwisku.
+user.orcid.invalid.format=Nieprawid\u0142owo zbudowany identyfikator.
+user.orcid.invalid.checksum=Nieprawid\u0142owy identyfikator.
 user.affiliation.tip=Instytucja przy kt\u00F3rej jeste\u015B afiliowana/afiliowany.
+user.affiliationror=ROR instytucji afiliuj\u0105cej
+user.affiliationror.tip=Identyfikator ROR instytucji afiliuj\u0105cej. Identyfikator musi zosta\u0107 podany w formie adresu URL, np. "https://ror.org/039bjqg32" dla Uniwersytetu Warszawskiego. W to pole mo\u017Cesz r\u00F3wnie\u017C wprowadzi\u0107 nazw\u0119 instytucji i wybra\u0107 jej identyfikator ROR z listy.
+user.affiliationror.suggestionDisplay.valueHeader=ROR
+user.affiliationror.suggestionDisplay.detailsHeader=Instytucja
+user.affiliationror.ror.invalid.format=Nieprawid\u0142owo zbudowany identyfikator ROR.
+user.affiliationror.ror.invalid.checksum=Nieprawid\u0142owy identyfikator ROR.
 user.position=Stanowisko
 user.position.tip=Stanowisko lub rola jak\u0105 pe\u0142nisz w instytucji, przy kt\u00F3rej jeste\u015B afiliowana/afiliowany, na przyk\u0142ad "pracownik naukowy", "student", "pracownik administracyjny" itp.
 user.notificationsLanguage=J\u0119zyk powiadomie\u0144 e-mailowych
