--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -3000,6 +3000,8 @@ dataset.metadata.inputRenderer.suggestion.ror.otherNames=Inne nazwy
 
 ror.invalid.format=Pole "{0}" nie zawiera poprawnie zbudowanego identyfikatora ROR.
 ror.invalid.checksum=Pole "{0}" nie zawiera prawid\u0142owego identyfikatora ROR.
+orcid.invalid.format=Pole "{0}" nie zawiera poprawnie zbudowanego identyfikatora ORCID.
+orcid.invalid.checksum=Pole "{0}" nie zawiera prawid\u0142owego identyfikatora ORCID.
 
 failed.login.title=Logowanie nieudane
 failed.login.cause.invalid.data=Dane przekazane przez Twoj\u0105 instytucje s\u0105 niepoprawne.
