Closes #2451: Show the add dataset button in the top menu even when user is not authenticated

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -3077,6 +3077,8 @@ add.dataset.dialog.info=Select the dataverse to which you want to add the new da
 add.dataset.dialog.tree.required=Dataverse has to be selected
 add.dataset.dialog.tree.filter=Filter dataverses
 add.dataset.dialog.button.create=Add a dataset to the selected dataverse
+add.dataset.dialog.login.redirect.header=Add dataset
+add.dataset.dialog.login.redirect.info=You need to <a href="{0}">Sign In/Sign Up</a> to add a dataset.
 
 geobox.invalid.empty=This field cannot be empty when other geobox field is filled.
 geobox.invalid.longitude=The longitude must be a number between -180 and 180.
