--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -3028,6 +3028,8 @@ add.dataset.dialog.info=Wybierz kolekcj\u0119 do kt\u00F3rej chcesz doda\u0107 n
 add.dataset.dialog.tree.required=Nale\u017Cy wybra\u0107 kolekcj\u0119
 add.dataset.dialog.tree.filter=Przefiltruj kolekcje
 add.dataset.dialog.button.create=Dodaj zbi\u00F3r danych do wybranej kolekcji
+add.dataset.dialog.login.redirect.header=Dodaj zbi\u00F3r danych
+add.dataset.dialog.login.redirect.info=Aby doda\u0107 zbi\u00F3r danych, musisz si\u0119 <a href="{0}">zalogowa\u0107/zarejestrowa\u0107</a>.
 
 geobox.invalid.empty=To pole nie mo\u017Ce by\u0107 puste, je\u015Bli inne pole geograficznego prostok\u0105ta ograniczaj\u0105cego zosta\u0142o wype\u0142nione.
 geobox.invalid.longitude=D\u0142ugo\u015B\u0107 geograficzna musi zawiera\u0107 si\u0119 mi\u0119dzy -180 a 180.
