Closes #2467: Add button to users dashboard to download csv with list of users

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -748,6 +748,7 @@ dashboard.card.users=Users
 dashboard.card.users.header=Dashboard - User List
 dashboard.card.users.super=Superusers
 dashboard.card.users.manage=Manage Users
+dashboard.list_users.download.csv=Download a CSV file with list of the users
 dashboard.list_users.searchTerm.watermark=Search these users\u2026
 dashboard.list_users.tbl_header.userId=ID
 dashboard.list_users.tbl_header.userIdentifier=Username
