--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -727,6 +727,7 @@ dashboard.card.users=U\u017Cytkownicy
 dashboard.card.users.header=Panel administratora - Lista u\u017Cytkownik\u00F3w
 dashboard.card.users.super=Superu\u017Cytkownicy
 dashboard.card.users.manage=Zarz\u0105dzaj u\u017Cytkownikami
+dashboard.list_users.download.csv=Pobierz plik CSV z list\u0105 u\u017Cytkownik\u00F3w
 dashboard.list_users.searchTerm.watermark=Wyszukaj u\u017Cytkownik\u00F3w\u2026
 dashboard.list_users.tbl_header.userId=ID
 dashboard.list_users.tbl_header.userIdentifier=Nazwa u\u017Cytkownika
