Closes #2424: Adding an Embargo badge to the search results

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -1627,6 +1627,7 @@ dataset.versionUI.inReview=In Review
 dataset.versionUI.unpublished=Unpublished
 dataset.versionUI.published=Published
 dataset.versionUI.deaccessioned=Deaccessioned
+dataset.versionUI.embargo=Embargo
 dataset.cite.title.released=DRAFT VERSION will be replaced in the citation with V1 once the dataset has been published.
 dataset.cite.title.draft=DRAFT VERSION will be replaced in the citation with the selected version once the dataset has been published.
 dataset.cite.title.deassessioned=DEACCESSIONED VERSION has been added to the citation for this version since it is no longer available.
