--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -1609,6 +1609,7 @@ dataset.versionUI.draft=Wersja robocza
 dataset.versionUI.inReview=W trakcie weryfikacji
 dataset.versionUI.unpublished=Nieopublikowany
 dataset.versionUI.deaccessioned=Wycofany
+dataset.versionUI.embargo=Embargo
 dataset.cite.title.released=Gdy zbi\u00F3r danych zostanie opublikowany, tekst "WERSJA ROBOCZA" w tre\u015Bci cytowania zostanie zast\u0105piony przez tekst "V1".
 dataset.cite.title.draft=Gdy zbi\u00F3r danych zostanie opublikowany, tekst "WERSJA ROBOCZA" w tre\u015Bci cytowania zostanie zast\u0105piony numerem wybranej wersji.
 dataset.cite.title.deassessioned=W tre\u015Bci cytowania tej wersji zosta\u0142 umieszczony tekst "WERSJA WYCOFANA", poniewa\u017C nie jest ona ju\u017C dost\u0119pna.
