--- a/doc/sphinx-guides/source/locale/pl/LC_MESSAGES/user/tabulardataingest/ingestprocess.po
+++ b/doc/sphinx-guides/source/locale/pl/LC_MESSAGES/user/tabulardataingest/ingestprocess.po
@@ -6,11 +6,11 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Dataverse 4.11\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: CeON\Dataverse 4.9.n\n"
+"Report-Msgid-Bugs-To: tlewand42\n"
 "POT-Creation-Date: 2024-02-06 13:53+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Last-Translator: Tomasz Lewandowski <tlewand@icm.edu.pl>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -36,7 +36,7 @@ msgstr ""
 
 #: ../../source/user/tabulardataingest/ingestprocess.rst:10
 msgid "|toctitle|"
-msgstr ""
+msgstr "Zawartość:"
 
 #: ../../source/user/tabulardataingest/ingestprocess.rst:13
 msgid "What Happens During this \"Ingest\"?"
@@ -118,8 +118,8 @@ msgid ""
 "Dataverse was originally based on the `DDI Codebook "
 "<http://www.ddialliance.org/Specification/DDI-Codebook/2.5/>`_ format."
 msgstr ""
-"Struktura metadanych definiujących tabelaryczne zmienne używane w Dataver"
-"se była pierwotnie oparta na formacie `DDI Codebook <http://www.ddiallian"
+"Struktura metadanych definiujących tabelaryczne zmienne używane w Dataverse"
+" była pierwotnie oparta na formacie `DDI Codebook <http://www.ddiallian"
 "ce.org/Specification/DDI-Codebook/2.5/>`_"
 
 #: ../../source/user/tabulardataingest/ingestprocess.rst:57
@@ -127,7 +127,9 @@ msgid ""
 "You can see an example of DDI output under the \"Data Variable Metadata "
 "Access\" section of the :doc:`/api/dataaccess` section of the API Guide."
 msgstr ""
-"Przykład danych wyjściowych DDI można zobaczyć w sekcji \"Dostęp do metadanych zmiennych\" (\"Data Variable Metadata Access\") w sekcji :doc:`/api/dataaccess` w API Guide (dostępnym w języku angielskim)."
+"Przykład danych wyjściowych DDI można zobaczyć w sekcji \"Dostęp do metada"
+"nych zmiennych\" (\"Data Variable Metadata Access\") w sekcji :doc:`/api/d"
+"ataaccess` w API Guide (dostępnym w języku angielskim)."
 
 #~ msgid ""
 #~ "The goal of our ingest process is"
