--- a/doc/sphinx-guides/source/locale/pl/LC_MESSAGES/user/tabulardataingest/spss.po
+++ b/doc/sphinx-guides/source/locale/pl/LC_MESSAGES/user/tabulardataingest/spss.po
@@ -6,11 +6,11 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Dataverse 4.11\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: CeON\Dataverse 4.9.n\n"
+"Report-Msgid-Bugs-To: tlewand42\n"
 "POT-Creation-Date: 2024-02-06 13:53+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2024-07-09 23:50+0200\n"
+"Last-Translator: Tomasz Lewandowski <tlewand@icm.edu.pl>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -27,7 +27,7 @@ msgstr "Pliki danych SPSS (formaty POR i SAV)."
 
 #: ../../source/user/tabulardataingest/spss.rst:7
 msgid "|toctitle|"
-msgstr ""
+msgstr "Zawartość:"
 
 #: ../../source/user/tabulardataingest/spss.rst:10
 msgid "Supported Versions"
@@ -75,7 +75,7 @@ msgstr ""
 
 #: ../../source/user/tabulardataingest/spss.rst:23
 msgid "Support for Language Encodings in SPSS"
-msgstr ""
+msgstr "Obsługa kodowania języka w SPSS"
 
 #: ../../source/user/tabulardataingest/spss.rst:25
 msgid ""
@@ -105,8 +105,8 @@ msgid ""
 "For example, if you know that the text in your SAV file is in Mandarin, "
 "and is encoded using the GB2312, specify it as follows:"
 msgstr ""
-"Na przykład, jeśli wiadomo, że tekst w plik SAV jest w języku mandaryński"
-"m i jest zakodowany przy użyciu GB2312, można postąpić w następujący sposób:"
+"Na przykład, jeśli wiadomo, że tekst w plik SAV jest w języku mandaryńskim"
+" i jest zakodowany przy użyciu GB2312, można postąpić w następujący sposób:"
 
 #: ../../source/user/tabulardataingest/spss.rst:29
 msgid ""
