--- a/doc/sphinx-guides/source/locale/pl/LC_MESSAGES/user/tabulardataingest/supportedformats.po
+++ b/doc/sphinx-guides/source/locale/pl/LC_MESSAGES/user/tabulardataingest/supportedformats.po
@@ -6,11 +6,11 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Dataverse 4.11\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: CeON/Dataverse 4.9.n\n\n"
+"Report-Msgid-Bugs-To: tlewand42\n"
 "POT-Creation-Date: 2022-10-20 18:16+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2024-07-09 23:45+0200\n"
+"Last-Translator: Tomasz Lewandowski <tlewand@icm.edu.pl>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -19,43 +19,43 @@ msgstr ""
 
 #: ../../source/user/tabulardataingest/supportedformats.rst:2
 msgid "Supported File Formats"
-msgstr ""
+msgstr "Obsługiwane formaty plików"
 
 #: ../../source/user/tabulardataingest/supportedformats.rst:7
 msgid "Tabular Data ingest supports the following file formats:"
-msgstr ""
+msgstr "Przetwarzanie danych tabelarycznych obejmuje następujące formaty plików:"
 
 #: ../../source/user/tabulardataingest/supportedformats.rst:11
 msgid "File format"
-msgstr ""
+msgstr "Formaty plików"
 
 #: ../../source/user/tabulardataingest/supportedformats.rst:11
 msgid "Versions supported"
-msgstr ""
+msgstr "Obsługiwane wersje"
 
 #: ../../source/user/tabulardataingest/supportedformats.rst:13
 msgid "SPSS (POR and SAV formats)"
-msgstr ""
+msgstr "SPSS (Por oraz SAV)"
 
 #: ../../source/user/tabulardataingest/supportedformats.rst:13
 msgid "7 to 22"
-msgstr ""
+msgstr "7 do 22"
 
 #: ../../source/user/tabulardataingest/supportedformats.rst:14
 msgid "STATA"
-msgstr ""
+msgstr "STATA"
 
 #: ../../source/user/tabulardataingest/supportedformats.rst:14
 msgid "4 to 13"
-msgstr ""
+msgstr "4 do 13"
 
 #: ../../source/user/tabulardataingest/supportedformats.rst:15
 msgid "R"
-msgstr ""
+msgstr "R"
 
 #: ../../source/user/tabulardataingest/supportedformats.rst:15
 msgid "up to 3"
-msgstr ""
+msgstr "do wersji 3"
 
 #: ../../source/user/tabulardataingest/supportedformats.rst:16
 msgid "Excel"
@@ -63,19 +63,21 @@ msgstr ""
 
 #: ../../source/user/tabulardataingest/supportedformats.rst:16
 msgid "XLSX only (XLS is NOT supported)"
-msgstr ""
+msgstr "XLSX (brak wsparcia dla formatu XLS)"
 
 #: ../../source/user/tabulardataingest/supportedformats.rst:17
 msgid "CSV (comma-separated values)"
-msgstr ""
+msgstr "CSV (wartości rozdzielone przecinkami)"
 
 #: ../../source/user/tabulardataingest/supportedformats.rst:17
 msgid "(limited support)"
-msgstr ""
+msgstr "(ograniczone wsparcie)"
 
 #: ../../source/user/tabulardataingest/supportedformats.rst:20
 msgid ""
 "See the subsections in the left sidebar for more information on each of "
 "these supported formats."
 msgstr ""
+"Więcej informacji na temat każdego z obsługiwanych formatów znajduje się "
+"w podrozdziałach w pasku bocznym"
 
